# reportd

./: .packit.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  meson.build  reportd.spec
.tito/: tito.props
.tito/custom/abrt/tagger/: __init__.py
dbus/: Makefile.am  meson.build  org.freedesktop.reportd.service.in  org.freedesktop.reportd.xml  report-dbus-constants.h
dbus/system/: meson.build  org.freedesktop.reportd.conf
dbus/user/: meson.build
package/: README.md  reportd.spec
po/: POTFILES.in
service/: Makefile.am  meson.build  report-daemon.cpp  report-daemon.h  report-service.cpp  report-service.h  report-task.cpp  report-task.h
src/: meson.build  org.freedesktop.reportd.xml  reportd-daemon.c  reportd-daemon.h  reportd-main.c  reportd-service.c  reportd-service.h  reportd-task.c  reportd-task.h  reportd-types.h  reportd.h
systemd/: meson.build  reportd.service.in
systemd/system/: meson.build  reportd.service.in
systemd/user/: meson.build  reportd.service.in
tests/: api-sanity-test
